    Fixed an issue where removing formatting in a table cell would cause Internet Explorer 11 to scroll to the end of the table #TINY-6049
    Fixed an issue where the `allow_html_data_urls` setting was not correctly applied #TINY-5951
    Fixed the `autolink` feature so that it no longer treats a string with multiple "@" characters as an email address #TINY-4773
Version 5.3.2 (2020-06-10)
    Fixed a regression introduced in 5.3.0, where `images_dataimg_filter` was no-longer called #TINY-6086
Version 5.3.1 (2020-05-27)
    Fixed the image upload error alert also incorrectly closing the image dialog #TINY-6020
    Fixed editor content scrolling incorrectly on focus in Firefox by reverting default content CSS html and body heights added in 5.3.0 #TINY-6019
Version 5.3.0 (2020-05-21)
    Added html and body height styles to the default oxide content CSS #TINY-5978
    Added `uploadUri` and `blobInfo` to the data returned by `editor.uploadImages()` #TINY-4579
    Added a new function to the `BlobCache` API to lookup a blob based on the base64 data and mime type #TINY-5988
    Added the ability to search and replace within a selection #TINY-4549
    Added the ability to set the list start position for ordered lists and added new `lists` context menu item #TINY-3915
    Added `icon` as an optional config option to the toggle menu item API #TINY-3345
    Added `auto` mode for `toolbar_location` which positions the toolbar and menu bar at the bottom if there is no space at the top #TINY-3161
    Changed the default `toolbar_location` to `auto` #TINY-3161
    Changed toggle menu items and choice menu items to have a dedicated icon with the checkmark displayed on the far right side of the menu item #TINY-3345
    Changed the `link`, `image`, and `paste` plugins to use Promises to reduce the bundle size #TINY-4710
    Changed the default icons to be lazy loaded during initialization #TINY-4729